--- a/PBL/Views/Shared/_Layout.cshtml
+++ b/PBL/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="Project" asp-action="Index">Projects List</a>
                         </li>
                     </ul>
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
