--- a/PBL/Views/Project/Details.cshtml
+++ b/PBL/Views/Project/Details.cshtml
@@ -53,7 +53,8 @@
                            
                         </span>
                     </a>
-                            @assignment.AssignmentName
+                    @assignment.AssignmentName<br />
+                    @assignment.AssignmentDueDate
                    
                     </li>
                     }
@@ -64,7 +65,8 @@
                         <span class="bubble">
                         </span>
                      </a>
-                    @assignment.AssignmentName
+                    @assignment.AssignmentName <br/>
+                    @assignment.AssignmentDueDate
                                
                 </li>
             }
