--- a/PBL/Views/Assignment/Details.cshtml
+++ b/PBL/Views/Assignment/Details.cshtml
@@ -2,6 +2,39 @@
 
 <center><h1>@Model.AssignmentName</h1></center>
 
+
+<h2>Files</h2>
+@if (Model.Files != null && Model.Files.Any())
+{
+    <ul>
+        @foreach (var file in Model.Files)
+        {
+            <li>
+                <a href="@Url.Action("Download", "File", new { id = file.FileId })">@file.FileName</a>
+                <button onclick="confirmDelete(@file.FileId)">Delete</button>
+                <form id="delete-form-@file.FileId" method="post" action="@Url.Action("Delete", "File", new { fileId = file.FileId })">
+                    <input type="hidden" name="projectId" value="@Model.ProjectId" />
+                    <input type="hidden" name="returnUrl" value="@Url.Action("Details", "Project", new { id = Model.ProjectId })" />
+                </form>
+            </li>
+        }
+    </ul>
+}
+else
+{
+    <p>No files found.</p>
+}
+<script>
+    function confirmDelete(id) {
+        if (confirm("Are you sure you want to delete this file?")) {
+            document.getElementById("delete-form-" + id).submit();
+        }
+    }
+</script>
+
+<a asp-action="Upload" asp-controller="File" asp-route-assignmentId="@Model.AssignmentId">Upload File</a>
+
+
 <p><strong>Due Date:</strong> @Model.AssignmentDueDate.ToShortDateString()</p>
 <p><strong>Is Completed:</strong> @(Model.AssignmentIsCompleted ? "Yes" : "No")</p>
 <p><strong>Project:</strong> @Model.ProjectName</p>
