--- a/PBL/Views/File/Upload.cshtml
+++ b/PBL/Views/File/Upload.cshtml
@@ -2,6 +2,7 @@
 
 <form method="post" enctype="multipart/form-data" asp-action="Upload" asp-controller="File">
     <input type="hidden" asp-for="ProjectId" />
+    <input type="hidden" asp-for="AssignmentId" />
     <div class="form-group">
         <label for="file">Choose file</label>
         <input type="file" class="form-control-file" id="file" name="File" asp-for="File" />
