--- a/PBL/Views/Home/Allocate.cshtml
+++ b/PBL/Views/Home/Allocate.cshtml
@@ -7,8 +7,8 @@
 <hr />
 <p>Select a project from the dropdown list, then select the student E-mail Address that you would like to be assigned to it.</p>
 <form asp-controller="Home" asp-action="Allocate" method="post">
-    <div class="form-group bg-black">
-        <label for="projectId" class="bg-black">Select Project:</label>
+    <div class="form-group ">
+        <label for="projectId" class="">Select Project:</label>
         @Html.DropDownListFor(m => m.Id, (IEnumerable<SelectListItem>)ViewBag.ProjectList, "-- Select Project --", new { @class = "form-control" })
     </div>
     <div class="form-group">
