--- a/PBL/Views/Home/Index.cshtml
+++ b/PBL/Views/Home/Index.cshtml
@@ -19,3 +19,5 @@
         <p> Please use the above menu to Log into your account, or Register a new one</p>
     }
 </center>
+
+<img src="pic/Homepage_bg.png" style="position:fixed; bottom:5%; right:5%; width:40%;" alt="" />
