--- a/PBL/Views/Project/Details.cshtml
+++ b/PBL/Views/Project/Details.cshtml
@@ -20,7 +20,12 @@
 
 </center>
 
-
+    <p>
+        <strong>Start Date: @Model.ProjectStartDate.ToShortDateString()</strong>
+        <strong style="float:right">End Date :@Model.ProjectEndDate.ToShortDateString()</strong>
+    </p>
+<div style="overflow:auto">
+    <div style="float:left;width:50%">
 <h2>Files</h2>
 @if (Model.Files != null && Model.Files.Any())
 {
@@ -37,6 +42,8 @@
             </li>
         }
     </ul>
+    <a href="@Url.Action("DownloadAll", "File", new { projectId = Model.ProjectId })">Download All</a>
+
 }
 else
 {
@@ -51,13 +58,31 @@ else
 </script>
 
 
-    <p>
-        <strong>Start Date: @Model.ProjectStartDate.ToShortDateString()</strong>
-        <strong style="float:right">End Date :@Model.ProjectEndDate.ToShortDateString()</strong>
-    </p>
+    </div>
+    <div style="float:right;width:50%">
 
-<hr/>
-<a asp-action="Upload" asp-controller="File" asp-route-projectId="@Model.ProjectId">Upload File</a>
+@if (User.IsInRole("Teacher"))
+{
+<form method="post" enctype="multipart/form-data" asp-action="Upload" asp-controller="File" asp-route-projectId="@Model.ProjectId" asp-route-uploadedBy="@User?.Identity?.Name">
+    <div class="form-group drop-zone">
+        
+            <input type="file" id="file" name="file" onchange="updateText()" class="custom-file-input" style="display:none" />
+            <label class="custom-file-label" for="file" style="display:none">Choose file</label>
+            <div id="drop-area">
+                <p id="textChange">Drag and drop a file here or click to choose a file.</p>
+            </div>
+        <div class="text-right">
+                        <button type="submit" class="btn btn-primary mt-3 col-12" id="uploadButton" disabled>Upload</button>
+        </div>
+      
+    </div>
+</form>
+
+
+}
+</div>
+</div>
+<hr />
 
 <h2>
     @*@Model.AssignedTo*@
@@ -123,15 +148,18 @@ else
         
         <div class="table">
             <div class="d-table-cell col-12">
-        <strong style="color:white">@comment.CreatedBy</strong> <p style="margin-left:2px;color:darkgrey" class="d-inline" ><font size="1"> @comment.CreatedAt</font></p>
-        <p style="margin-top:2px;color:white">@comment.CommentText</p>
+        <strong style="color:black">@comment.CreatedBy</strong> <p style="margin-left:2px;color:darkgrey" class="d-inline" ><font size="1"> @comment.CreatedAt</font></p>
+                <p style="margin-top:2px;color:black">@comment.CommentText</p>
             </div>
         <div class="d-table-cell">
-        <form asp-controller="Comment" asp-action="DeleteComment" method="post" style="display:inline-table" class="delete-btn">
-            <input type="hidden" name="commentId" value="@comment.CommentId" />
+                @if (comment.CreatedBy == User.Identity.Name)
+                {
+                    <form asp-controller="Comment" asp-action="DeleteComment" method="post" style="display:inline-table" class="delete-btn">
+                        <input type="hidden" name="commentId" value="@comment.CommentId" />
                     <input type="hidden" name="view" value="ProjectDetails" />
-            <button type="submit" class="btn btn-danger">Delete</button>
+            <button type="submit" class="btn btn-danger text-black">Delete</button>
         </form>
+        }
                 </div>
         </div>
     }
@@ -148,10 +176,10 @@ else
 
     <div class="form-group col-4">
         <label for="text">Add a comment:</label>
-        <textarea class="form-control bg-black col-4" style="color:white" id="text" name="text"></textarea>
+        <textarea class="form-control col-4" style="color:black" id="text" name="text"></textarea>
     </div>
 
-    <button type="submit" class="btn btn-dark">Add Comment</button>
+    <button type="submit" class="btn btn-outline-primary">Add Comment</button>
 </form>
 
 @if (User.IsInRole("Teacher"))
@@ -163,12 +191,12 @@ else
         <br/>
         <form asp-action="Grade" asp-route-projectId="@Model?.ProjectId" method="post">
             <div class="form-group col-1 ">
-                <label asp-for="ProjectGrade" class="control-label col-6 bg-black"> Grade: </label>
-                <input asp-for="ProjectGrade" class="form-control col-6 bg-black" style="color:white;background-color:black" value="" />
+                <label asp-for="ProjectGrade" class="control-label col-6"> Grade: </label>
+                <input asp-for="ProjectGrade" class="form-control col-6 " style="color:black;" value="" />
                 <span asp-validation-for="ProjectGrade" class="text-danger col-6"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Grade" class="btn btn-dark col-1" />
+                <input type="submit" value="Grade" class="btn btn-outline-success col-1" />
             </div>
         </form>
     </div>
@@ -176,3 +204,4 @@ else
 <div class="mt-auto p-2 bd-highlight">
     <a asp-action="Index" class="btn col-12 btn-secondary ">Back to List</a>
 </div>
+
