--- a/PBL/wwwroot/css/site.css
+++ b/PBL/wwwroot/css/site.css
@@ -2,12 +2,12 @@ html {
     font-size: 14px;
     color: white;
 }
-.form{
+/*.form{
     background-color:black;
-}
-h1 {
+}*/
+/*h1 {
     color: white;
-}
+}*/
 @media (min-width: 768px) {
   html {
     font-size: 16px;
@@ -21,7 +21,7 @@ html {
 
 body {
     margin-bottom: 60px;
-    color: white;
+    /*color: white;*/
 }
 
 a{
@@ -223,9 +223,9 @@ a{
 }
 
 
-body {
+/*body {
     background-color: #000;
-}
+}*/
 
 .ag-courses_box {
     display: -webkit-box;
@@ -308,11 +308,11 @@ body {
 }
 
 .ag-courses_item:nth-child(2n) .ag-courses-item_bg {
-    background-color: #3ecd5e;
+    background-color: #e44002;
 }
 
 .ag-courses_item:nth-child(3n) .ag-courses-item_bg {
-    background-color: #e44002;
+    background-color: #3ecd5e;
 }
 
 .ag-courses_item:nth-child(4n) .ag-courses-item_bg {
@@ -380,3 +380,17 @@ body {
     .comment:hover .delete-btn {
         display: block;
     }
+.drop-zone {
+    border: 2px dashed #ccc;
+    padding: 20px;
+    background: #f9f9f9;
+}
+
+#drop-area {
+    height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: bold;
+}
