--- a/PBL/Areas/Identity/Pages/Account/Login.cshtml
+++ b/PBL/Areas/Identity/Pages/Account/Login.cshtml
@@ -50,16 +50,16 @@
     </div>
     <div class="col-md-6 col-md-offset-2">
         <section>
-            <h3>Use another service to log in.</h3>
-            <hr />
+            <h3></h3>
+           
             @{
                 if ((Model.ExternalLogins?.Count ?? 0) == 0)
                 {
                     <div>
                         <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
+                          @*  There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
                             about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
+                      *@  </p>
                     </div>
                 }
                 else
@@ -79,6 +79,7 @@
         </section>
     </div>
 </div>
+<img src="../../pic/Login_bg.png" style="position:fixed; bottom:5%; right:5%; width:40%;" alt="" />
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
