--- a/PBL/Areas/Identity/Pages/Account/Register.cshtml
+++ b/PBL/Areas/Identity/Pages/Account/Register.cshtml
@@ -9,7 +9,7 @@
 <div class="row">
     <div class="col-md-4">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
+            <h3>Create a new account.</h3>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating">
@@ -32,15 +32,15 @@
     </div>
     <div class="col-md-6 col-md-offset-2">
         <section>
-            <h3>Use another service to register.</h3>
-            <hr />
+            <h3></h3>
+         
             @{
                 if ((Model.ExternalLogins?.Count ?? 0) == 0)
                 {
                     <div>
                         <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
+                            <h4><strong>Create a new account using a valid e-mail address. 
+                            <br/> Make sure that your password contains an Uppercase characher, a Numeric one, and one Symbol. </strong></h4>
                         </p>
                     </div>
                 }
@@ -58,10 +58,13 @@
                     </form>
                 }
             }
-        </section>
-    </div>
-</div>
+          
+            </section>
 
+    </div>
+
+</div>
+<img src="../../pic/Register_bg.png" style="position:fixed; bottom:5%; right:5%; width:40%;" alt="" />
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
